adição de aula 2 e 3
novas tags e exemplos

--- a/principais_tags_html.p1.html
+++ b/principais_tags_html.p1.html
@@ -26,8 +26,8 @@
       <br>
       <hr>
       <p>para 2</p>
-      <!-- link -->
-    <a href="#">auweie</a>
+      <!-- link blank nova aba-->
+    <a href="#" target="_blank">auweie</a>
     <br><br>
 
 
