--- a/aula_tabelas.html
+++ b/aula_tabelas.html
@@ -38,6 +38,51 @@
             </tr>
         </tbody>
     </table>
+    <br>
+
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Data</th>
+                <th>Tipo</th>
+                <th>Descrição</th>
+                <th>Valor</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <!-- rowspan = atributo para mesclar tabela vertical -->
+                 <!-- quando utilizado para os atributos que forem mesclados voce deve retirar o dado em casa que sera mesclado -->
+                <!-- temos o colspan no caso mescla colunas horizontal segue mesma ideia apagar o dado seguinte para não desformatar tabela -->
+                <td rowspan="4">13/12/2024</td>
+                <td colspan="2">Despesa</td>
+                <!-- <td>Mistura</td> -->
+                <td>R$ 150,00</td>
+            </tr>
+
+            <tr>
+                <!-- <td>13/12/2024</td> -->
+                <td>Presente</td>
+                <td>Teclado</td>
+                <td>R$ 60,00</td>
+            </tr>
+
+            <tr>
+                <!-- <td>13/12/2024</td> -->
+                <td>Lazer</td>
+                <td>Parque</td>
+                <td>R$ 130,00</td>
+            </tr>
+
+            <tr>
+                <!-- <td>13/12/2024</td> -->
+                <td>Conta</td>
+                <td>Internet</td>
+                <td>R$ 150,00</td>
+            </tr>
+        </tbody>
+    </table>
 
 </body>
 
